Fix cross compile error in l10n_string_util.cc

Bug: 916866
Change-Id: Ia30833934c2cadecf33126eda3e008319ec380a3
Reviewed-on: https://chromium-review.googlesource.com/c/1385891
Commit-Queue: Nico Weber <thakis@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618197}
Former-commit-id: 3fc33b19991bdf79dc9606564460f63555455e40